# umay

./: .gitignore  Dockerfile  README.md  license.md  pyproject.toml  requirements.txt  setup.py
src/umay/: __init__.py  cli.py  config.ini  config.toml  intender.py  main.py  parser.py
src/umay/generic/: intents.yaml  main.py  umay.yaml
src/umay/generic_/: intents.yaml
src/umay/listener/: main.py
src/umay/mode/: __init__.py
src/umay/mode/generic/: __init__.py  entities.yaml  intents.yaml
src/umay/mode/manager/: __init__.py  intents.yaml  main.py
src/umay/normal/: __init__.py  main.py  umay.yaml
todo_yamls/: generic.py  input.py
umay/: __init__.py  cli.py  config.ini  main.py  parser.py  run.py
umay/generic/: config.ini  generic.py  intents.yaml
umay/modes/generic/: __init__.py  entities.yaml  generic.py  intents.yaml
umay/modes/i3/window/: __init__.py
umay/modes/todos/: entities.yaml  generic.py  generic_intents.yaml  input_intents.yaml
umay/parser/: __init__.py  base.py  snips_parser.py  snips_parser_.py  snips_parser__.py
